--- a/app/src/components/editor/global.css
+++ b/app/src/components/editor/global.css
@@ -15,19 +15,21 @@
   height: 0;
 }
 
-.vditor-task input[type=checkbox]:checked::before {
+.vditor-task input[type=checkbox]:checked::before, .checkbox-check {
   margin-top: 1px;
   display: block;
-  content: "✔";
+  content: "✓";
   position: absolute;
   top: 50%;
   left: -38px;
   transform: translateY(-50%);
   font-size: 20px;
+  font-weight: 600;
   color: #24292e;
 }
 
-.vditor-task input[type=checkbox]::after {
+
+.vditor-task input[type=checkbox]::after, .checkbox-box {
   margin-top: 1px;
   display: block;
   content: "";
@@ -39,4 +41,17 @@
   top: 50%;
   left: -40px;
   transform: translateY(-50%);
+}
+
+.checkbox-box {
+  width: 22px;
+  height: 22px;
+}
+
+.vditor-task.print input[type=checkbox]:checked::before {
+  content: unset
+}
+
+.vditor-task.print input[type=checkbox]::after {
+  content: unset
 }
