--- a/app/src/components/editor/global.css
+++ b/app/src/components/editor/global.css
@@ -18,7 +18,7 @@
 .vditor-task input[type=checkbox]:checked::before, .checkbox-check {
   margin-top: 1px;
   display: block;
-  content: "✓";
+  content: "✔️";
   position: absolute;
   top: 50%;
   left: -38px;
